    [+] QtilitiesProcess now has the ability to store all buffered messages from a process for you in something
        called a last run buffer. See the new QtilitiesProcess::lastRunBuffer() and related functions for more information.
	[+] Added QtilitiesProcess::assignFileLoggerEngineToProcess().
	[+] Added Task::LifeTimeDestroyWhenCompleted to Task::TaskLifeTime.

    [#] QtilitiesProcess::logProgressOutput() and QtilitiesProcess::logProgressError() are now protected slots, allowing
        subclasses to reimplement its functionality. Also, bunch of improvements internally in QtilitiesProcess and
        detailed documentation how messages from the backend process are buffered was added.
    [#] Changed debug messages in Observer's destructor to trace messages.
    [#] QtilitiesProperty is now properly documented.
    [#] Moved registration of Logger::MessageType and Logger::MessageContext from ITask to Logger's constructor.
    [#] FileUtils::makeLocalCopyOfResource() will also create the local_path directory using QDir::mkpath() if it does not exist.
    [#] FileUtils::makeLocalCopyOfResource()'s errorMsg parameter is no longer compulsory.
    [#] Assign default -1 value to Task::lastErrorMessages()'s count parameter.
	[#] Improved error reporting in QtilitiesProcess. When the working directory of the process does not exist, it will 
	    tell you this instead of telling you that the executable does not exist when the process fails with QProcess::FailedToStart.

    [*] Fixed bug in Observer::handle_deletedSubject() where application can sometimes
        crash with "Detected QWeakPointer creation in a QObject being deleted".
    [*] Fixed possible crash in TreeIterator::last() when the TreeIterator was constructed with a null node.
    [*] Fixed potential crash in ~QtilitiesProcess() when it was run in a different thread. Now using deleteLater()
        on backend process.