@@ -50,6 +50,7 @@ https://github.com/JPNaude/Qtilities/issues/milestones
 	[+] Added QtilitiesProcess::assignFileLoggerEngineToProcess().
 	[+] Added Task::LifeTimeDestroyWhenCompleted to Task::TaskLifeTime.
 
+	[#] Expose busyStateChanged() from private class on QtilitiesCoreApplication and QtilitiesApplication.
     [#] QtilitiesProcess::logProgressOutput() and QtilitiesProcess::logProgressError() are now protected slots, allowing
         subclasses to reimplement its functionality. Also, bunch of improvements internally in QtilitiesProcess and
         detailed documentation how messages from the backend process are buffered was added.
